--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -302,12 +302,16 @@
                         sub1_tableCell.innerText = arrayList[key2];
                         sub1_tableLine.append(sub1_tableCell);
                     });
-                    try { console.log(sub1_val_r[key1]); } catch (error) { console.error(error); }
-                    try { console.log(sub1_val_r[key1].Name); } catch (error) { console.error(error); }
+                    sub1_tableCell = document.createElement('td');
+                    try { sub1_tableCell.innerText = sub1_val_r[key1].Name; } catch (error) {
+                        try {
+                            sub1_tableCell.innerText = sub1_val_r[key1];
+                        } catch (error) { console.error(error); }
+                    }
+                    sub1_tableLine.append(sub1_tableCell);
                     try { console.log(sub1_val_r[key1].Area.Name); } catch (error) { console.error(error); }
                     try { console.log(sub1_val_r[key1].Area.MaxInt); } catch (error) { console.error(error); }
                     /*
-                    sub1_tableCell = document.createElement('td');
                     sub1_tableCell.innerText = sub1_val_r[key1].Name;
                     sub1_tableMeta.append(sub1_tableLine);
                     sub1_tableCell = document.createElement('td');
