tbodyに追加し忘れてた

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -320,6 +320,7 @@
                     sub1_tableMeta.append(sub1_tableLine);
                     */
                 });
+                sub1_tableMeta.append(sub1_tableLine);
                 sub1_tableBlock.append(sub1_tableMeta);
                 /*
                 arrayList = [];
