td追加し忘れ

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -308,11 +308,13 @@
                             sub1_tableCell.innerText = sub1_val_r[key1];
                         } catch (error) { console.error(error); }
                     }
+                    sub1_tableCell = document.createElement('td');
                     try { sub1_tableCell.innerText = sub1_val_r[key1].Area.Name; } catch (error) {
                         try {
                             sub1_tableCell.innerText = sub1_val_r[key1];
                         } catch (error) { console.error(error); }
                     }
+                    sub1_tableCell = document.createElement('td');
                     try { sub1_tableCell.innerText = sub1_val_r[key1].Area.MaxInt; } catch (error) {
                         try {
                             sub1_tableCell.innerText = sub1_val_r[key1];
