--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -303,6 +303,7 @@
                         sub1_tableLine.append(sub1_tableCell);
                     });
                     sub1_tableCell = document.createElement('td');
+                    console.log(sub1_val_r[key1].Name);
                     try { sub1_tableCell.innerText = sub1_val_r[key1].Name; } catch (error) {
                         try {
                             sub1_tableCell.innerText = sub1_val_r[key1];
