--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -302,24 +302,12 @@
                     });
                     sub1_tableCell = document.createElement('td');
                     console.log(sub1_val_r[key1].Name);
-                    try { sub1_tableCell.innerText = sub1_val_r[key1].Name; } catch (error) {
-                        try {
-                            sub1_tableCell.innerText = sub1_val_r[key1];
-                        } catch (error) { console.error(error); }
-                    }
-                    sub1_tableCell = document.createElement('td');
-                    try { sub1_tableCell.innerText = sub1_val_r[key1].Area.Name; } catch (error) {
-                        try {
-                            sub1_tableCell.innerText = sub1_val_r[key1];
-                        } catch (error) { console.error(error); }
-                    }
-                    sub1_tableCell = document.createElement('td');
-                    try { sub1_tableCell.innerText = sub1_val_r[key1].Area.MaxInt; } catch (error) {
-                        try {
-                            sub1_tableCell.innerText = sub1_val_r[key1];
-                        } catch (error) { console.error(error); }
-                    }
+                    sub1_tableCell.innerText = JSON.stringify( sub1_val_r, null, '   ' );
+                    sub1_tableCell.colSpan=3;
+                    sub1_tableCell.style.whiteSpace='pre-wrap';
+                    sub1_tableCell.style.fontSize='xx-small';
                     sub1_tableLine.append(sub1_tableCell);
+
                     /*
                     sub1_tableCell.innerText = sub1_val_r[key1].Name;
                     sub1_tableMeta.append(sub1_tableLine);
