--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -303,6 +303,7 @@
                     sub1_tableCell = document.createElement('td');
                     console.log(sub1_val_r[key1].Name);
                     sub1_tableCell.innerText = JSON.stringify( sub1_val_r, null, '   ' );
+                    sub1_tableCell.innerText = '';
                     sub1_tableCell.colSpan=3;
                     sub1_tableCell.style.whiteSpace='pre-wrap';
                     sub1_tableCell.style.fontSize='xx-small';
