githubのソースコードへのリンク追加

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -158,6 +158,7 @@
                 arrayList.push(eqvol.link[key]['@attributes']['href']);
             });
             arrayList.push(location.href.replace(/html$/,'json'));
+            arrayList.push('https://github.com/n138-kz/EarthQuakeHasAlert/tree/main/sample2');
             console.debug(arrayList);
             arrayList.map(function(val) {
                 listLine = document.createElement('li');
