--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -304,6 +304,18 @@
                     });
                     sub1_tableCell = document.createElement('td');
                     console.log(sub1_val_r[key1].Name);
+                    console.log([
+                        [
+                            'sub1_val_r.length',
+                            'sub1_val_r',
+                            'JSON.stringify( sub1_val_r, null, \'   \' )',
+                        ],
+                        [
+                            sub1_val_r.length,
+                            sub1_val_r,
+                            JSON.stringify( sub1_val_r, null, '   ' ),
+                        ],
+                    ]);
                     sub1_tableCell.innerText = '';
                     sub1_tableCell.innerText += '&lt;'+sub1_val_r.length+'&gt;';
                     sub1_tableCell.innerText += JSON.stringify( sub1_val_r, null, '   ' );
