--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -134,6 +134,7 @@
             header1 = document.createElement('h1');
             header1.classList.add('meta');
             header1.innerText = eqvol.title;
+            header1.innerText = '地震情報';
             header1.title = eqvol.subtitle;
             root_body.append(header1);
 
