load ./lib/isset.js

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -42,6 +42,7 @@
             );
         }
     </script>
+    <script src="./lib/isset.js"></script>
     <script>
         function issueAlert(issuer_object) {
             console.log(issuer_object.dataset.eventid);
