cb47a45e: 画面更新フラグ（デフォルト:false=更新する）
cb47a45ed05a6901b1588c225740056837050eb4

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -123,6 +123,9 @@
             }
         }
         function getFeedXML_eqvol() {
+            if(debugInfo('stop_refresh')!==false){
+                return false;
+            }
             let xhr = new XMLHttpRequest();
             xhr.onreadystatechange = function() {
                 console.debug(xhr.readyState);
