sub1_tableBlock.style.width = 300px

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -304,6 +304,7 @@
                 tableCell = document.createElement('td');
                 sub1_tableBlock = document.createElement('table');
                 sub1_tableBlock.classList.add('content');
+                sub1_tableBlock.style.width = '300px';
                 sub1_tableBlock.border = 1;
                 sub1_tableMeta = document.createElement('thead');
                 sub1_val_r = [0];
