fix css: overflowY→overflow-y

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -396,7 +396,7 @@
     <style>
         body {
             background: linear-gradient(0.5turn, #3f87a6, #ebf8e1, #f69d3c);
-            overflowY: hidden;
+            overflow-y: hidden;
         }
         h1.meta {
             margin: 0;
