jsonおかしくなるのでjsonだけにする

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -347,9 +347,7 @@
                         ],
                     ]);
                     sub1_tableCell.innerText = '';
-                    sub1_tableCell.innerText += '&lt;'+sub1_val_r.length+'&gt;';
-                    sub1_tableCell.innerText += JSON.stringify( sub1_val_r, null, '   ' );
-                    sub1_tableCell.innerText += '';
+                    sub1_tableCell.innerText = JSON.stringify( sub1_val_r, null, '   ' );
                     sub1_tableCell.colSpan=3;
                     sub1_tableCell.style.whiteSpace='pre-wrap';
                     sub1_tableCell.style.fontSize='xx-small';
