--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -397,6 +397,7 @@
     <style>
         body {
             background: linear-gradient(0.5turn, #3f87a6, #ebf8e1, #f69d3c);
+            background-repeat: no-repeat;
         }
         h1.meta {
             margin: 0;
