--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -395,6 +395,7 @@
             getFeedXML_eqvol();
         });
         window.addEventListener('DOMContentLoaded', function() {
+            console.log('DOMContent loaded');
             init_pageloaded_eqvol();
         });
         setInterval(() => {
