idもclassも持っていないbody直下のdivを削除する
document.querySelectorAll('body>div:not([id]), body>div:not([class])')は、body要素の直下にあるdiv要素のうち、id属性とclass属性がどちらも設定されていないdiv要素をすべて取得するクエリです。

似たようなクエリをいくつか挙げると、次のようなものがあります。

document.querySelectorAll('body>div') - body要素の直下にあるすべてのdiv要素を取得する
document.querySelectorAll('body>div:not([id])') - body要素の直下にあるid属性が設定されていないdiv要素をすべて取得する
document.querySelectorAll('body>div:not([class])') - body要素の直下にあるclass属性が設定されていないdiv要素をすべて取得する
document.querySelectorAll('body>div:not([id]):not([class])') - body要素の直下にあるid属性とclass属性がどちらも設定されていないdiv要素をすべて取得する
これらのクエリは、WebページのHTMLを操作する際に役立ちます。

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -400,6 +400,9 @@
         });
         setInterval(() => {
             getFeedXML_eqvol();
+            document.querySelectorAll('body>div:not([id]):not([class])').forEach(function(elm){
+                elm.remove();
+            });
         }, 1000*10);
     </script>
     <style>
