--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -422,6 +422,7 @@
         table.content th, table.content td {
             margin: 0;
             white-space:nowrap;
+            vertical-align: top;
         }
         @media screen and (orientation: portrait) {
             .display_landscape {
