--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -86,7 +86,9 @@
             return dateftext.resultText;
         }
         function set_eqvol(eqvol) {
-            eqvol = JSON.stringify(eqvol);
+            if ( Array.isArray( eqvol ) ) {
+                eqvol = JSON.stringify( eqvol );
+            }
             return sessionStorage.setItem(
                 (btoa(location.href)).slice(0, 16) + '.eqvol',
                 eqvol
