fix: Uncaught ReferenceError: hash is not defined

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -67,7 +67,7 @@
             }
             if ( typeof params == 'object' ) {
                 let result=0;
-                for (let [key, value] of Object.entries(hash)) {
+                for (let [key, value] of Object.entries(params)) {
                     console.log('key:' + key + ' value:' + value);
                     result=result&1;
                 }
