--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -289,14 +289,14 @@
                 console.log(val_r.detail.Body);
                 tableLine = document.createElement('tr');
                 tableCell = document.createElement('td');
-                linkText = document.createElement('input');
-                linkText.value = '手動発報';
-                linkText.type = 'button';
-                linkText.dataset.eventid = val_r.detail.Head.EventID;
-                linkText.setAttribute('onclick', 'issueAlert(this)');
-                tableCell.append(linkText);
-                dom_comment = document.createComment(JSON.parse(val_r));
-                tableCell.append(dom_comment);
+                tableText = document.createElement('input');
+                tableText.value = '手動発報';
+                tableText.type = 'button';
+                tableText.dataset.eventid = val_r.detail.Head.EventID;
+                tableText.setAttribute('onclick', 'issueAlert(this)');
+                tableCell.append(tableText);
+                tableText = document.createComment(JSON.parse(val_r));
+                tableCell.append(tableText);
                 tableLine.append(tableCell);
                 /*
                 tableCell = document.createElement('td');
