--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -295,7 +295,7 @@
                 tableText.dataset.eventid = val_r.detail.Head.EventID;
                 tableText.setAttribute('onclick', 'issueAlert(this)');
                 tableCell.append(tableText);
-                tableText = document.createComment(JSON.parse(val_r));
+                tableText = document.createComment(JSON.stringify(val_r));
                 tableCell.append(tableText);
                 tableLine.append(tableCell);
                 /*
