気象庁発表に文言統一

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -263,7 +263,7 @@
             arrayList.push('▶');
             //arrayList.push('Title');
             //arrayList.push('Updated');
-            arrayList.push('ArrivalTime');
+            arrayList.push('地震検知日時');
             //arrayList.push('Author');
             arrayList.push('Content');
             //arrayList.push('EventID');
@@ -272,7 +272,7 @@
             //arrayList.push('InfoType');
             //arrayList.push('Serial');
             arrayList.push('Status');
-            arrayList.push('震源');
+            arrayList.push('震央地名');
             arrayList.push('最大震度');
             arrayList.push('各地の震度');
             tableLine = document.createElement('tr');
