--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -265,7 +265,7 @@
             //arrayList.push('Updated');
             arrayList.push('地震検知日時');
             //arrayList.push('Author');
-            arrayList.push('Content');
+            //arrayList.push('Content');
             //arrayList.push('EventID');
             arrayList.push('InfoKind');
             //arrayList.push('InfoKindVersion');
@@ -325,9 +325,11 @@
                 tableCell.innerText = val_r.author.name;
                 tableLine.append(tableCell);
                 */
+                /*
                 tableCell = document.createElement('td');
                 tableCell.innerText = replaceFullToHalf(val_r.content).replace('　', '');
                 tableLine.append(tableCell);
+                */
                 /*
                 tableCell = document.createElement('td');
                 tableCell.innerText = val_r.detail.Head.EventID;
