--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -267,7 +267,7 @@
             //arrayList.push('Author');
             //arrayList.push('Content');
             //arrayList.push('EventID');
-            arrayList.push('InfoKind');
+            //arrayList.push('InfoKind');
             //arrayList.push('InfoKindVersion');
             //arrayList.push('InfoType');
             //arrayList.push('Serial');
@@ -335,6 +335,7 @@
                 tableCell.innerText = val_r.detail.Head.EventID;
                 tableLine.append(tableCell);
                 */
+                /*
                 tableCell = document.createElement('td');
                 tableCell.innerText = val_r.detail.Head.InfoKind;
                 tableLine.append(tableCell);
@@ -342,6 +343,7 @@
                 tableCell = document.createElement('td');
                 tableCell.innerText = val_r.detail.Head.InfoKindVersion;
                 tableLine.append(tableCell);
+                */
                 /*
                 tableCell = document.createElement('td');
                 tableCell.innerText = val_r.detail.Head.InfoType;
