--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -105,8 +105,8 @@
             dateftext.resultText += dateftext.appendzero.Hours.substring( dateftext.appendzero.Hours.length-2 );
             dateftext.resultText += ':'
             dateftext.resultText += dateftext.appendzero.Minutes.substring( dateftext.appendzero.Minutes.length-2 );
-            dateftext.resultText += ':'
-            dateftext.resultText += dateftext.appendzero.Seconds.substring( dateftext.appendzero.Seconds.length-2 );
+            //dateftext.resultText += ':'
+            //dateftext.resultText += dateftext.appendzero.Seconds.substring( dateftext.appendzero.Seconds.length-2 );
             dateftext.resultText += ''
             return dateftext.resultText;
         }
