--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -314,8 +314,7 @@
                 */
                 tableCell = document.createElement('td');
                 linkText = document.createElement('a');
-                linkText.href  = '';
-                linkText.href += 'https://www.data.jma.go.jp/multi/quake/quake_detail.html?lang=jp&eventID=';
+                linkText.href  = 'https://www.data.jma.go.jp/multi/quake/quake_detail.html?lang=jp&eventID=';
                 linkText.href += val_r.detail.Head.EventID;
                 linkText.innerText = datef(new Date(val_r.detail.Body.Earthquake.ArrivalTime));
                 tableCell.append(linkText);
