リンク差し替え 01e4e59c + fa7ffc63

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -314,7 +314,7 @@
                 */
                 tableCell = document.createElement('td');
                 linkText = document.createElement('a');
-                linkText.href = val_r.detail.Head.jma['@attributes'].href;
+                linkText.href = val_r['detail']['Head']['jma']['link']['@attributes']['href'];
                 linkText.innerText = datef(new Date(val_r.detail.Body.Earthquake.ArrivalTime));
                 tableCell.append(linkText);
                 tableLine.append(tableCell);
