--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -162,9 +162,8 @@
         }
         function init_pageloaded_eqvol() {
             root_body = document.getElementById('eqvol');
-            object_block = document.createElement('div');
-            object_block.style.height = window.innerHeight + 'px';
-            root_body.append(object_block);
+            root_body.style.height = document.documentElement.clientHeight + 'px';
+            root_body.style.maxHeight = document.documentElement.clientHeight + 'px';
         }
         function getFeedXML_eqvol() {
             if(debugInfo('stop_refresh')!==false){
