--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -528,13 +528,15 @@
             width: 50px;
             height: 50px;
             border-radius: 50%;
+            position: fixed;
+            top: 0;
+            right: 0;
+            z-index: 1;
         }
         @media screen and (orientation: landscape) {
             .g_id_signin {
-                position: fixed;
-                top: 0;
-                right: 0;
-                z-index: 1;
+                width: 20px;
+                height: 20px;
             }
         }
     </style>
