--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -463,7 +463,7 @@
                     tableText.dataset.fontlist0 = 'https://myrica.estable.jp/myricamhistry/';
                     tableText.dataset.fontlist1 = 'https://myrica.estable.jp/myricamhistry/';
                     tableText.dataset.fontlist2 = 'https://myrica.estable.jp/myricamhistry/';
-                    tableText.dataset.fontlist3 = 'https://en.wikipedia.org/wiki/Monospace_(typeface)';
+                    tableText.dataset.fontlist3 = 'https://en.wikipedia.org/wiki/Monospace_%28typeface%29';
                     tableCell.append(tableText);
 
                     console.error(error);
