body bg-color 0.25turn, #f69d3c, #ebf8e1, #3f87a6

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -510,8 +510,7 @@
             height: 100%;
         }
         body {
-            background: linear-gradient(0.5turn, #3f87a6, #ebf8e1, #f69d3c);
-            background-repeat: no-repeat-x;
+            background: linear-gradient(0.25turn, #f69d3c, #ebf8e1, #3f87a6);
         }
         h1.meta {
             margin: 0;
